--- a/public/index.css
+++ b/public/index.css
@@ -554,6 +554,26 @@ video {
   --tw-contain-style:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .flex {
   display: flex;
 }
@@ -562,8 +582,29 @@ video {
   min-height: 100vh;
 }
 
-.items-center {
-  align-items: center;
+.w-full {
+  width: 100%;
+}
+
+.resize {
+  resize: both;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-neutral-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity));
 }
 
 .bg-neutral-800 {
@@ -573,6 +614,20 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.font-open-sans {
+  font-family: Open Sans, sans-serif;
 }
 
 .text-3xl {
@@ -587,4 +642,99 @@ video {
 .text-neutral-200 {
   --tw-text-opacity: 1;
   color: rgb(229 229 229 / var(--tw-text-opacity));
+}
+
+.nav-link {
+  display: flex;
+  width: -moz-fit-content;
+  width: fit-content;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.nav-top-text {
+  font-size: 0.625rem;
+  font-weight: 600;
+  line-height: 1;
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .nav-top-text {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-top-text {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+.nav-bottom-text {
+  font-size: 0.625rem;
+  font-weight: 500;
+  line-height: 1.375;
+  --tw-text-opacity: 1;
+  color: rgb(229 229 229 / var(--tw-text-opacity));
+}
+
+@media (min-width: 550px) {
+  .nav-bottom-text {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-bottom-text {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-bottom-text {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 350px) {
+  .\33xs\:gap-4 {
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 450px) {
+  .\32xs\:gap-8 {
+    gap: 2rem;
+  }
+}
+
+@media (min-width: 550px) {
+  .xs\:gap-12 {
+    gap: 3rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:gap-16 {
+    gap: 4rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:gap-6 {
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:gap-16 {
+    gap: 4rem;
+  }
 }
