Add text marquee hero text

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
 .nav-bottom-text {
     @apply leading-snug font-medium text-neutral-200 text-2xs xs:text-xs md:text-base lg:text-lg transform transition duration-300 lg:group-hover:text-neutral-500
 }
+
+.name-marquee {
+    @apply text-[70px] 2xs:text-8xl font-semibold text-neutral-200 whitespace-nowrap md:text-[120px] lg:text-[160px]
+}
