--- a/public/index.css
+++ b/public/index.css
@@ -570,16 +570,12 @@ video {
   bottom: 0px;
 }
 
-.bottom-20 {
-  bottom: 5rem;
+.bottom-28 {
+  bottom: 7rem;
 }
 
 .left-0 {
   left: 0px;
-}
-
-.left-6 {
-  left: 1.5rem;
 }
 
 .right-0 {
@@ -596,14 +592,6 @@ video {
 
 .top-1\/2 {
   top: 50%;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-6 {
-  top: 1.5rem;
 }
 
 .z-10 {
@@ -624,8 +612,16 @@ video {
   margin-top: 1rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -695,6 +691,10 @@ video {
   overflow: hidden;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-t {
   border-top-width: 1px;
 }
@@ -702,11 +702,6 @@ video {
 .border-neutral-700 {
   --tw-border-opacity: 1;
   border-color: rgb(64 64 64 / var(--tw-border-opacity));
-}
-
-.bg-neutral-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-neutral-900 {
@@ -734,8 +729,24 @@ video {
   padding-bottom: 1rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .pt-8 {
@@ -760,6 +771,11 @@ video {
   line-height: 1.5rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -774,9 +790,15 @@ video {
   color: rgb(163 163 163 / var(--tw-text-opacity));
 }
 
+.shadow-bot-shadow {
+  --tw-shadow: 0 5px 8px rgba(0, 0, 0, 0.4);
+  --tw-shadow-colored: 0 5px 8px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-top-shadow {
-  --tw-shadow: 0 -1px 4px rgba(0, 0, 0, 0.3);
-  --tw-shadow-colored: 0 -1px 4px var(--tw-shadow-color);
+  --tw-shadow: 0 -2px 8px rgba(0, 0, 0, 0.4);
+  --tw-shadow-colored: 0 -2px 8px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -895,8 +917,8 @@ video {
   margin-top: -0.625rem;
   margin-bottom: -0.625rem;
   display: block;
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 1rem;
+  width: 1rem;
   --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -925,12 +947,36 @@ video {
   border-color: rgb(229 229 229 / var(--tw-border-opacity));
 }
 
+@media (min-width: 768px) {
+  .scroll-indicator {
+    height: 1.25rem;
+    width: 1.25rem;
+  }
+}
+
 .scroll-indicator:nth-child(2) {
   animation-delay: 0.2s;
 }
 
 .scroll-indicator:nth-child(1) {
   animation-delay: 0.4s;
+}
+
+/* Select the scrollbar track */
+
+::-webkit-scrollbar-track {
+  /* Change the background color */
+  background-color: #f1f1f1;
+}
+
+/* Select the scrollbar thumb */
+
+::-webkit-scrollbar-thumb {
+  /* Change the background color */
+  background-color: #888;
+  /* Change the size of the thumb */
+  height: 30px;
+  width: 30px;
 }
 
 @media (min-width: 350px) {
@@ -976,6 +1022,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:bottom-20 {
+    bottom: 5rem;
+  }
+
   .md\:mt-12 {
     margin-top: 3rem;
   }
