--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,14 @@
 @tailwind utilities;
 
 .link-hover {
-    @apply transform transition duration-300 lg:hover:scale-105
+    @apply transform transition duration-300 lg:hover:text-neutral-500
 }
 
 /* Nav styles */
+.nav-link-hover {
+    @apply transform transition duration-300 lg:hover:scale-105
+}
+
 .nav-link {
     @apply flex flex-col items-end w-fit py-2
 }
