--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,14 @@ a, button {
 }
 
 /* Project section */
+/* Wrapper around each dot for larger clickable area */
+.pagination-wrapper {
+    @apply p-3 flex justify-center items-center; /* Larger clickable area while keeping the dot centered */
+}
+
+/* Dot styles */
 .pagination-dot {
-    @apply w-3 h-3 bg-neutral-500 rounded-full transform transition duration-300
+    @apply w-3 h-3 bg-neutral-500 rounded-full transform transition duration-300; /* Size of the visual dot */
 }
 
 .active-pagination-dot {
