--- a/src/index.css
+++ b/src/index.css
@@ -73,16 +73,24 @@ body {
     @apply flex justify-between items-center p-4 text-left w-full bg-neutral-800 transition duration-300 lg:hover:bg-neutral-750
 }
 
-.accordion-content {
+.accordion-content-wrapper {
     @apply overflow-hidden 
 }
 
-.content-text {
+.accordion-content {
     @apply p-4 opacity-0 transition-opacity duration-1000 ease-in-out
 }
 
-.content-text.show {
+.accordion-content.show {
     @apply opacity-100
+}
+
+.accordion-icon {
+    @apply transition duration-300 ease-in-out
+}
+
+.accordion-icon-rotate {
+    @apply transform -rotate-180
 }
 
 /* Cursor dot */
