--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .nav-bottom-text {
-    @apply leading-none font-medium text-neutral-200 text-2xs xs:text-xs md:text-base lg:text-lg lg:group-hover:text-neutral-500
+    @apply leading-none font-medium text-neutral-200 text-2xs transition duration-300 xs:text-xs md:text-base lg:text-lg lg:group-hover:text-neutral-500
 }
 
 .name-marquee {
