--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,24 @@ a, button {
 }
 
 
+.scroll-up {
+    animation-name: scroll-up;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes scroll-up {
+    0%, 75% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    40% {
+        transform: translateY(-20px);
+        opacity: 0.5;
+    }
+}
+
 
 /* Chrome, Edge, and Safari scrollbar styles */
 *::-webkit-scrollbar {
