--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,18 @@ body {
     @apply block px-4 py-2 bg-neutral-700 rounded-md transition duration-300 lg:hover:bg-neutral-600 lg:text-lg
 }
 
+.section-heading {
+    @apply font-semibold text-xl lg:text-2xl
+}
+
+.details-button {
+    @apply font-semibold text-xl p-3 bg-neutral-800 border border-neutral-600
+}
+
+.marquee-gap {
+    @apply flex gap-[10rem] md:gap-[16rem] lg:gap-[20rem]
+}
+
 
 /* Cursor dot */
 .cursor-dot {
