--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 .list {
-    @apply list-disc list-inside ml-4
+    @apply flex flex-col gap-1 list-disc list-inside ml-4 leading-relaxed
 }
 
 /* Nav styles */
@@ -173,7 +173,7 @@ body {
 }
 
 .project-details-heading {
-    @apply text-lg font-medium uppercase mb-2
+    @apply text-lg font-semibold uppercase mb-2 underline
 }
 
 
