--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ body {
     @apply flex flex-col gap-2 list-disc list-inside ml-4 leading-relaxed
 }
 
+.list a {
+    @apply underline
+}
+
 /* Nav styles */
 .nav-link-hover {
     @apply transform transition duration-300 lg:hover:scale-105
