--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ body {
     @apply bg-neutral-800 p-3 rounded-lg h-full shadow-all-shadow
 }
 
+.view-all-projects {
+    @apply block font-medium p-4 lg:text-lg link-hover
+}
+
 /* Sections */
 .section {
     @apply flex flex-col w-full max-w-[1400px] mx-auto
@@ -172,13 +176,29 @@ body {
 }
 
 .project-details-tab {
-    @apply flex flex-col gap-12 max-h-[600px] overflow-y-scroll py-12 px-6 2xs:px-8 xs:px-12 md:px-16 lg:px-24
+    @apply flex flex-col gap-12 max-h-[600px] overflow-y-scroll py-12 px-6 2xs:px-8 xs:px-12 md:px-16 lg:px-24 
 }
 
 .project-details-heading {
     @apply text-lg font-semibold uppercase mb-2 underline
 }
 
+.project-details-fade-in {
+    animation-name: fade-in;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 /* Cursor dot */
 .cursor-dot {
