--- a/src/index.css
+++ b/src/index.css
@@ -204,6 +204,36 @@ body {
     @apply absolute -bottom-12 sm:static p-2 text-neutral-200 transition duration-300 lg:hover:text-neutral-500
 }
 
+.slick-track {
+    display: flex;
+}
+
+/* @media (min-width: 768px) {
+    .slick-track {
+        gap: 60px;
+    }
+} */
+
+.slick-slide {
+    display: flex;
+    align-items: stretch;
+    /* width: calc(100% - 30px); */
+}
+
+@media (min-width: 768px) {
+    .slick-slide {
+        margin: 0 30px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .slick-slide {
+        margin: 0 60px;
+    }
+}
+
+
+
 /* Cursor dot */
 .cursor-dot {
     @apply h-4 w-4 rounded-full fixed top-0 left-0 transform -translate-x-1/2 -translate-y-1/2 bg-neutral-300 z-30 pointer-events-none
