--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ body {
 
 /* Sections */
 .section {
-    @apply flex flex-col w-full max-w-[1400px] mx-auto
+    @apply flex flex-col w-full max-w-[1400px] mx-auto lg:px-16 1xl:px-16 2xl:px-6
 }
 
 .section-smaller {
